# flutter-mcp

./: pyproject.toml  setup.py
npm-wrapper/: index.js  package-lock.json  package.json
npm-wrapper/scripts/: install.js
src/flutter_mcp/: cli.py  logging_utils.py  server.py
