[project]
name = "flutter-mcp-server"
version = "0.1.2"
description = "MCP server providing real-time Flutter/Dart documentation to AI assistants"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [{name = "Flutter MCP Contributors"}]
keywords = ["flutter", "dart", "mcp", "ai", "documentation", "pubdev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "humanize>=4.11.0",
    "mcp>=1.27.0,<2",
    "platformdirs>=4.0.0",
    "rich>=13.10.0",
    "structlog>=25.4.0",
]

[project.urls]
"Homepage" = "https://github.com/flutter-mcp/flutter-mcp"
"Bug Reports" = "https://github.com/flutter-mcp/flutter-mcp/issues"
"Source" = "https://github.com/flutter-mcp/flutter-mcp"

[project.scripts]
flutter-mcp = "flutter_mcp.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flutter_mcp"]
